--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.19.5"
+    "sequelize": "^5.19.5",
+    "yup": "^0.27.0"
   }
 }
